src/objects/MIBNF__x.object
<CustomObject>
    <description>CRM-MC-ESPSFDCQI-804 - External object for Legacy IMulti Invoice BNF custom object.</description>
    <externalDataSource>Legacy_IMS</externalDataSource>
    <externalName>MIBNF__c</externalName>
    <fields>
        <fullName>Addendum_Reasons_c__c</fullName>
        <externalDeveloperName>Addendum_Reasons__c</externalDeveloperName>
        <label>Revised BNF Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Fees</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Change Billing Frequency</fullName>
                </value>
                <value>
                    <fullName>Change in Contract Timing</fullName>
                </value>
                <value>
                    <fullName>Change in Distribution</fullName>
                </value>
                <value>
                    <fullName>Change in Number of Copies</fullName>
                </value>
                <value>
                    <fullName>Change of Address/Contact Person</fullName>
                </value>
                <value>
                    <fullName>Change of Content</fullName>
                </value>
                <value>
                    <fullName>Change PO number</fullName>
                </value>
                <value>
                    <fullName>Change Prices or Discounts (not Price Increase)</fullName>
                </value>
                <value>
                    <fullName>Other- please describe in the comments section</fullName>
                </value>
                <value>
                    <fullName>Pass Thru Expense</fullName>
                </value>
                <value>
                    <fullName>Price Increase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Addendum_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Addendum__c</externalDeveloperName>
        <label>Revised BNF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Billing_Date_Information_c__c</fullName>
        <externalDeveloperName>Additional_Billing_Date_Information__c</externalDeveloperName>
        <label>Additional Billing Date Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BNF_Count_c__c</fullName>
        <externalDeveloperName>BNF_Count__c</externalDeveloperName>
        <label>BNF Count</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Currency_c__c</fullName>
        <externalDeveloperName>Billing_Currency__c</externalDeveloperName>
        <label>Billing Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BDT</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>BOB</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>CRC</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>DOP</fullName>
                </value>
                <value>
                    <fullName>DZD</fullName>
                </value>
                <value>
                    <fullName>EGP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>GHS</fullName>
                </value>
                <value>
                    <fullName>GTQ</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HRK</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_c__c</fullName>
        <externalDeveloperName>Client__c</externalDeveloperName>
        <label>Client</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_c__c</fullName>
        <externalDeveloperName>Comments__c</externalDeveloperName>
        <label>Comments to Revenue Analysts</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>Received Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>Sent Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date_c__c</fullName>
        <externalDeveloperName>Contract_End_Date__c</externalDeveloperName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date_c__c</fullName>
        <externalDeveloperName>Contract_Start_Date__c</externalDeveloperName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term_c__c</fullName>
        <externalDeveloperName>Contract_Term__c</externalDeveloperName>
        <label>Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single-Period</fullName>
                </value>
                <value>
                    <fullName>Multi-Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type_c__c</fullName>
        <externalDeveloperName>Contract_Type__c</externalDeveloperName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Master Agreement</fullName>
                </value>
                <value>
                    <fullName>C&amp;S Master Service Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Value_c__c</fullName>
        <externalDeveloperName>Contract_Value__c</externalDeveloperName>
        <label>Contract Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description_c__c</fullName>
        <externalDeveloperName>Description__c</externalDeveloperName>
        <label>Description:</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Currency_c__c</fullName>
        <externalDeveloperName>Display_Currency__c</externalDeveloperName>
        <label>Billing Currency</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fair_Value_Type_c__c</fullName>
        <externalDeveloperName>Fair_Value_Type__c</externalDeveloperName>
        <label>Fair Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stand Alone</fullName>
                </value>
                <value>
                    <fullName>MEA - with one off</fullName>
                </value>
                <value>
                    <fullName>MEA - without one off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMS_Sales_Org_c__c</fullName>
        <externalDeveloperName>IMS_Sales_Org__c</externalDeveloperName>
        <label>IMS Sales/Billing Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[AE01] Dimensions Healthcare</fullName>
                </value>
                <value>
                    <fullName>[AR01] IMS Argentina</fullName>
                </value>
                <value>
                    <fullName>[AR02] IMS Argentina Pharma</fullName>
                </value>
                <value>
                    <fullName>[AR71] IMS Health Information Solutions Argentina S.A.</fullName>
                </value>
                <value>
                    <fullName>[AT52] IMS Austria</fullName>
                </value>
                <value>
                    <fullName>[AU01] IMS Health Australia Pty Ltd</fullName>
                </value>
                <value>
                    <fullName>[AU20] M-TAG (AUST)</fullName>
                </value>
                <value>
                    <fullName>[BD01] IMS Health Bangladesh Ltd</fullName>
                </value>
                <value>
                    <fullName>[BE03] Source Belgium</fullName>
                </value>
                <value>
                    <fullName>[BE04] HEDM Belgium</fullName>
                </value>
                <value>
                    <fullName>[BE51] IMS Health BVBA / SPRL</fullName>
                </value>
                <value>
                    <fullName>[BE52] Forcea NV</fullName>
                </value>
                <value>
                    <fullName>[BO01] IMS Bolivia</fullName>
                </value>
                <value>
                    <fullName>[BR01] IMS Brazil</fullName>
                </value>
                <value>
                    <fullName>[BR05] IMS Health SI Ltda</fullName>
                </value>
                <value>
                    <fullName>[BR71] IMS Health SoluÃ§Ãµes de Tecnologia do Brasil Ltda.</fullName>
                </value>
                <value>
                    <fullName>[BT01] Battaerd Mansley Pty Ltd</fullName>
                </value>
                <value>
                    <fullName>[CA03] IMS Health Canada Consulting</fullName>
                </value>
                <value>
                    <fullName>[CA10] Privacy Analytics Inc.</fullName>
                </value>
                <value>
                    <fullName>[CH03] IHA, IMS Health Rotkreuz</fullName>
                </value>
                <value>
                    <fullName>[CH07] M&amp;H Informatics</fullName>
                </value>
                <value>
                    <fullName>[CH08] Acceletra</fullName>
                </value>
                <value>
                    <fullName>[CH12] CORE Holding</fullName>
                </value>
                <value>
                    <fullName>[CH13] CORE Center</fullName>
                </value>
                <value>
                    <fullName>[CH51] IMS AG Switzerland</fullName>
                </value>
                <value>
                    <fullName>[CL01] IMS Chile</fullName>
                </value>
                <value>
                    <fullName>[CL02] IMS Chile Capacitaciones</fullName>
                </value>
                <value>
                    <fullName>[CL03] Operaciones Centralizadas</fullName>
                </value>
                <value>
                    <fullName>[CL04] Iasist S.A.U. agencia En Chile</fullName>
                </value>
                <value>
                    <fullName>[CN03] IMS Meridian – Shanghai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Default_Day_c__c</fullName>
        <externalDeveloperName>Invoice_Default_Day__c</externalDeveloperName>
        <label>Invoice Default Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>Last Activity Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MIBNF_Status_c__c</fullName>
        <externalDeveloperName>MIBNF_Status__c</externalDeveloperName>
        <label>BNF Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Accrual</fullName>
                </value>
                <value>
                    <fullName>Addendum</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>SAP Rejected</fullName>
                </value>
                <value>
                    <fullName>SAP Contract Created</fullName>
                </value>
                <value>
                    <fullName>SAP Contract Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Handling_in_SAP_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Manual_Handling_in_SAP__c</externalDeveloperName>
        <label>Manual Handling in SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Invoice_Count_c__c</fullName>
        <externalDeveloperName>Max_Invoice_Count__c</externalDeveloperName>
        <label>Max_Invoice_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>MIBNF Name</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number_c__c</fullName>
        <externalDeveloperName>Opportunity_Number__c</externalDeveloperName>
        <label>Opportunity Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>CRM-MC-ESPSFDCQI-824</description>
        <externalDeveloperName>Opportunity__c</externalDeveloperName>
        <label>Opportunity</label>
        <length>18</length>
        <referenceTargetField>Opportunity.LI_Opportunity_Id__c</referenceTargetField>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Multi Invoice BNF&apos;s</relationshipLabel>
        <relationshipName>Multi_Invoice_BNF_s</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_c__c</fullName>
        <externalDeveloperName>Opportunity__c</externalDeveloperName>
        <label>Opportunity</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Prior_Opportunity_Id_c__c</fullName>
        <externalDeveloperName>Original_Prior_Opportunity_Id__c</externalDeveloperName>
        <label>Original/Prior Opportunity Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Prior_Opportunity_c__c</fullName>
        <externalDeveloperName>Original_Prior_Opportunity__c</externalDeveloperName>
        <label>Original/Prior Opportunity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Code_c__c</fullName>
        <externalDeveloperName>Parent_Code__c</externalDeveloperName>
        <label>SAP Base Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_c__c</fullName>
        <externalDeveloperName>Payment_Terms__c</externalDeveloperName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0000-Default Payment Terms of Customer Master Data</fullName>
                </value>
                <value>
                    <fullName>0001-Payable immediately Due net</fullName>
                </value>
                <value>
                    <fullName>ZA00-Payable within 30 days</fullName>
                </value>
                <value>
                    <fullName>ZB00-Payable immediately Due net</fullName>
                </value>
                <value>
                    <fullName>ZB03-Within 21 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB05-payable within 5 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB07-payable within 7 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB10-payable within 10 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB14-payable within 14 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB15-payable within 15 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB20-payable within 20 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB21-payable within 21 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB30-Payable within 30 days from date of invoice</fullName>
                </value>
                <value>
                    <fullName>ZB3M-30 days end of month</fullName>
                </value>
                <value>
                    <fullName>ZB45-payable within 45 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB50-Payable within 50 days due net</fullName>
                </value>
                <value>
                    <fullName>ZB60-payable within 60 days due net</fullName>
                </value>
                <value>
                    <fullName>ZB90-Within 90 Days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB97-payable immediately upon receipt</fullName>
                </value>
                <value>
                    <fullName>ZBD4-payment due 30 days after invoice date</fullName>
                </value>
                <value>
                    <fullName>ZBD5-1.5 % discount within 10 days</fullName>
                </value>
                <value>
                    <fullName>ZBFR-Payment terms France</fullName>
                </value>
                <value>
                    <fullName>ZBMA-Payment terms Morocco</fullName>
                </value>
                <value>
                    <fullName>ZBTN-Payment terms Tunesia</fullName>
                </value>
                <value>
                    <fullName>ZGR5-Other</fullName>
                </value>
                <value>
                    <fullName>ZI01- 45 Days after invoice end of Month</fullName>
                </value>
                <value>
                    <fullName>ZJ06-Term 30 Days From Date of Invoice</fullName>
                </value>
                <value>
                    <fullName>ZJ07-Term End of Next Month Based on Date of Invoice</fullName>
                </value>
                <value>
                    <fullName>ZJ08-Term 60 Days From Date of Invoice</fullName>
                </value>
                <value>
                    <fullName>ZJ09-Term End of 2nd Month Based on Date of Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Print_Shop_c__c</fullName>
        <externalDeveloperName>Print_Shop__c</externalDeveloperName>
        <label>Print Shop</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_SAP_Code_c__c</fullName>
        <externalDeveloperName>Product_SAP_Code__c</externalDeveloperName>
        <label>Product SAP Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RA_Rejection_Count_c__c</fullName>
        <externalDeveloperName>RA_Rejection_Count__c</externalDeveloperName>
        <label>RA Rejection Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rejection_Reasons_c__c</fullName>
        <externalDeveloperName>Rejection_Reasons__c</externalDeveloperName>
        <label>Rejection Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>Billing Date</fullName>
                </value>
                <value>
                    <fullName>Billing/Legal Entity</fullName>
                </value>
                <value>
                    <fullName>Billing Frequency</fullName>
                </value>
                <value>
                    <fullName>Contract Period</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Data Period</fullName>
                </value>
                <value>
                    <fullName>Delivery Frequency</fullName>
                </value>
                <value>
                    <fullName>Duplicated BNF/Opp</fullName>
                </value>
                <value>
                    <fullName>Evidence</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Missing Documents</fullName>
                </value>
                <value>
                    <fullName>Multiple Error</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Revenue Type</fullName>
                </value>
                <value>
                    <fullName>Wrong Assignee</fullName>
                </value>
                <value>
                    <fullName>WBS Not Created</fullName>
                </value>
                <value>
                    <fullName>WBS With Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Renewal__c</externalDeveloperName>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retainer_Data_Value_c__c</fullName>
        <externalDeveloperName>Retainer_Data_Value__c</externalDeveloperName>
        <label>Retainer/Down Payment Data Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Analyst_c__c</fullName>
        <externalDeveloperName>Revenue_Analyst__c</externalDeveloperName>
        <label>Revenue Analyst</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Analyst_del_c__c</fullName>
        <externalDeveloperName>Revenue_Analyst_del__c</externalDeveloperName>
        <label>Revenue Analyst (User)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_BNF_Comment_c__c</fullName>
        <externalDeveloperName>Revised_BNF_Comment__c</externalDeveloperName>
        <label>Revised BNF Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Revised_BNF_Date_c__c</fullName>
        <externalDeveloperName>Revised_BNF_Date__c</externalDeveloperName>
        <label>Revised BNF Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Contract_Type_c__c</fullName>
        <externalDeveloperName>SAP_Contract_Type__c</externalDeveloperName>
        <label>SAP Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD-HOC</fullName>
                </value>
                <value>
                    <fullName>CONTRACT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Master_Contract_c__c</fullName>
        <externalDeveloperName>SAP_Master_Contract__c</externalDeveloperName>
        <label>SAP Master Contract #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_PC_Code_c__c</fullName>
        <externalDeveloperName>SAP_PC_Code__c</externalDeveloperName>
        <label>SAP PC Code</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAP_Rejection_Count_c__c</fullName>
        <externalDeveloperName>SAP_Rejection_Count__c</externalDeveloperName>
        <label>SAP Rejection Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_SD_Error_Group_c__c</fullName>
        <externalDeveloperName>SAP_SD_Error_Group__c</externalDeveloperName>
        <label>SAP SD Error Group</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_SD_Error_Message_c__c</fullName>
        <externalDeveloperName>SAP_SD_Error_Message__c</externalDeveloperName>
        <label>SAP SD Error Message</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>